Migrate TestDeltaLakeSelectCompatibility to JUnit